# libnlp

./: .gitignore  AUTHORS  CMakeLists.txt  release_py_linux.sh  release_py_osx.sh  setup.py
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
_build/data/: Makefile  cmake_install.cmake
_build/data/normalize/: HKVariantsRev.ocd2  JPShinjitaiPhrases.ocd2  JPVariants.ocd2  JPVariantsRev.ocd2  Makefile  STPhrases.ocd2  TSPhrases.ocd2  TWVariantsRevPhrases.ocd2  cmake_install.cmake
_build/data/segment/: Makefile  cmake_install.cmake
_build/doc/: Makefile  cmake_install.cmake
_build/doc/normalize/: Makefile  cmake_install.cmake
_build/libnlp/: Makefile  cmake_install.cmake
_build/libnlp/config/: libnlp_config.h
_build/package/: libnlp.pc
_build_py/: CMakeCache.txt  Makefile  cmake_install.cmake  setup.py
_build_py/libnlp/python/: Makefile  cmake_install.cmake
_build_py/package/: libnlp.pc
benchmark/: CMakeLists.txt  libnlp_cc_performance.cc
cmake/: carbin_module.cmake  carbin_package.cmake  carbin_setting.cmake  carbin_summary.cmake
cmake/modules/: CompileProto.cmake  carbin_cc_benchmark.cmake  carbin_cc_binary.cmake  carbin_cc_library.cmake  carbin_cc_test.cmake  carbin_check.cmake  carbin_color.cmake  carbin_config_cxx_opts.cmake  carbin_include.cmake  carbin_install_dirs.cmake  carbin_outof_source.cmake  carbin_package_generator.cmake  carbin_package_rpm.cmake  carbin_pkg_dump.cmake  carbin_platform.cmake  carbin_print.cmake  carbin_print_list.cmake  carbin_variable.cmake
cmake/package/: carbin_config.cmake.in  pkg_dump_template.pc.in  postinst
cmake/recipes/: Findbenchmark.cmake  Findc-ares.cmake  Findgflags.cmake  Findglog.cmake  Findgmock.cmake  Findgperftools.cmake  Findgtest.cmake  Findleveldb.cmake  Findpcre.cmake  Findprotobuf.cmake  Findsnappy.cmake  require_benchmark.cmake  require_faiss.cmake  require_flare.cmake  require_frat.cmake  require_gflags.cmake  require_gmock.cmake  require_gtest.cmake  require_leveldb.cmake  require_openssl.cmake  require_rapidjson.cmake  require_rocksdb.cmake  require_tclap.cmake
conda/: bak_meta.yaml  bld-lib.sh  bld.sh  bld_py.bat  bld_py.sh  conda_build_config.yaml  environment_linux.yaml  environment_osx.yaml  meta.yaml  run.sh
copts/: copts.py  generate_copts.py
data/: CMakeLists.txt
data/cc/: CMakeLists.txt
data/normalize/: CMakeLists.txt
data/normalize/config/: jp2t.json  t2jp.json
data/segment/: CMakeLists.txt
data/segment/jieba/: README.md
doc/: CMakeLists.txt
doc/cc/: CMakeLists.txt
doc/normalize/: libnlp_cc.doxy.in
libnlp/: CMakeLists.txt
libnlp/base/: common.h  exception.h  export.h  inline_vector.h  logging.h  std_extension.h  string_util.h  unicode.h  utf8_string_view.cc  utf8_string_view.h  utf8_util.cc  utf8_util.h
libnlp/config/: libnlp_config.h.in
libnlp/dict/: binary_dict.cc  binary_dict.h  darts_dict.cc  darts_dict.h  dict.cc  dict.h  dict_base.cc  dict_base.h  dict_builder.cc  dict_builder.h  dict_converter.cc  dict_converter.h  dict_entity.cc  dict_entity.h  dict_entry.cc  dict_entry.h  dict_group.cc  dict_group.h  dict_loader.cc  dict_loader.h  lexicon.cc  lexicon.h  marisa_dict.cc  marisa_dict.h  serializable_dict.h  serialized_values.cc  serialized_values.h  text_dict.cc  text_dict.h
libnlp/normalize/: normalizer.h  option.h  xstring.cc  xstring.h
libnlp/normalize/cc/: cc_config.cc  cc_config.h  conversion.cc  conversion.h  conversion_chain.cc  conversion_chain.h  converter.cc  converter.h  libnlp_cc.h  max_match_segmentation.cc  max_match_segmentation.h  phrase_extract.cc  phrase_extract.h  segmentation.cc  segmentation.h  segments.h  simple_converter.cc  simple_converter.h
libnlp/normalize/trimmer/: emoji.cc  emoji.h
libnlp/python/: CMakeLists.txt  setup.py
libnlp/python/dict/: py_dict.cc
libnlp/python/libnlp/normalize/: __init__.py
libnlp/python/libnlp/segment/: __init__.py
libnlp/python/normalize/: py_normalize.cc
libnlp/python/normalize/cc/: py_libnlp_cc.cc
libnlp/python/normalize/trimmer/: py_libnlp_trimmer.cc
libnlp/python/segment/: py_segment.cc
libnlp/segment/jieba/: dict_trie.h  full_segment.h  hmm_model.h  hmm_segment.h  jieba.cc  jieba.h  keyword_extractor.h  mix_segment.h  mp_segment.h  pos_tagger.h  pre_filter.h  query_segment.h  segment_base.h  segment_tagged.h  text_rank_extractor.h  trie.h
libnlp/tools/: cc_command_line.cc  cc_dict_converter.cc  cc_phrase_extract.cc  cmdline_output.h
libnlp/trie/: htrie_hash.h  htrie_map.h  htrie_set.h  marisa.h
libnlp/trie/array/: array_growth_policy.h  array_hash.h  array_map.h  array_set.h
libnlp/trie/marisa/: agent.cc  agent.h  base.h  exception.h  key.h  keyset.cc  keyset.h  query.h  scoped-array.h  scoped-ptr.h  trie.cc  trie.h
libnlp/trie/marisa/grimoire/: algorithm.h  intrin.h  io.h  trie.h  vector.h
libnlp/trie/marisa/grimoire/algorithm/: sort.h
libnlp/trie/marisa/grimoire/io/: mapper.cc  mapper.h  reader.cc  reader.h  writer.cc  writer.h
libnlp/trie/marisa/grimoire/trie/: cache.h  config.h  entry.h  header.h  history.h  key.h  louds-trie.cc  louds-trie.h  range.h  state.h  tail.cc  tail.h
libnlp/trie/marisa/grimoire/vector/: bit-vector.cc  bit-vector.h  flat-vector.h  pop-count.h  rank-index.h  vector.h
python/: .gitignore  ex.py
python/libnlp/: .gitignore  __init__.py
test/: CMakeLists.txt
test/base/: CMakeLists.txt  unicode_test.cc  utf8_string_view_test.cc  utf8_util_test.cc
test/dict/: darts_dict_test.cc  dict_group_test.cc  marisa_dict_test.cc  text_dict_test.cc
test/normalize/: CMakeLists.txt
test/normalize/cc/: CMakeLists.txt  cc_config_test.cc  conversion_chain_test.cc  conversion_test.cc  max_match_segmentation_test.cc  ohrase_extract_test.cc  serialized_values_test.cc  simple_converter_test.cc
test/segment/: CMakeLists.txt
test/segment/jieba/: CMakeLists.txt  jieba_test.cc  keyword_extractor_test.cc  pos_tagger_test.cc  pre_filter_test.cc  segments_test.cc  textrank_test.cc  trie_test.cc
test/testing/: cc_config_test_base.h  dict_group_test_base.h  test_utils.h  test_utils_utf8.h  text_dict_test_base.h
(+18 files in other folders)
