################################################################
#
# Copyright (c) 2022, liyinbin
# All rights reserved.
# Author by liyibin (jeff.li)
#
#################################################################



include_directories(${CMAKE_SOURCE_DIR}/test/testing)
add_subdirectory(normalize)
add_subdirectory(base)
add_subdirectory(dict)
add_subdirectory(segment)